[gd_scene load_steps=17 format=3 uid="uid://ce48elb3fsyic"]

[ext_resource type="Script" uid="uid://b82cfax4l7ul3" path="res://Scripts/player_controller.gd" id="1_cvnsp"]
[ext_resource type="Script" uid="uid://dbdpgchc4cwmk" path="res://Scripts/player_visual.gd" id="3_6t5aa"]
[ext_resource type="Script" uid="uid://cwq3dfxk7my27" path="res://Scripts/player_ui.gd" id="4_fkybt"]
[ext_resource type="Texture2D" uid="uid://dj0jvwa25owq1" path="res://Sprites/hud_heartFull.png" id="4_vgqql"]
[ext_resource type="ArrayMesh" uid="uid://xmt2xitb40xe" path="res://Models/Characters/character-male-d.obj" id="5_x3wgy"]
[ext_resource type="Script" uid="uid://c18s40xpp2swj" path="res://Scripts/GOScn.gd" id="7_3smsa"]
[ext_resource type="Script" uid="uid://cqq4suxgli1rd" path="res://camera/camera.gd" id="7_8erm5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lsmp6"]
radius = 0.169431
height = 0.697453

[sub_resource type="LabelSettings" id="LabelSettings_vgqql"]
font_size = 38
shadow_size = 8
shadow_color = Color(0, 0, 0, 0.709804)

[sub_resource type="Animation" id="Animation_af3po"]
resource_name = "Fade_in"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeRect:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(-0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Color(0.00351917, 0.00351917, 0.00351917, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOver:text")
tracks/1/interp = 2
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.366667, 0.7, 0.74, 0.833333, 0.99, 1.15),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["Game Over", "Ga", "Gam", "Game", "Game OV", "Game O", "Game OV", "Game OVE", "Game OVER"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FadeRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_uy8f0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOver:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Game Over"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FadeRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6r07y"]
_data = {
&"Fade_in": SubResource("Animation_af3po"),
&"RESET": SubResource("Animation_uy8f0")
}

[sub_resource type="SystemFont" id="SystemFont_8erm5"]
font_names = PackedStringArray("Zapfino")
font_weight = 475
font_stretch = 200
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_f1ek2"]

[sub_resource type="ViewportTexture" id="ViewportTexture_tx1dd"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_3smsa"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:scale")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Player" type="CharacterBody3D" groups=["Player"]]
script = ExtResource("1_cvnsp")

[node name="Model" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00609231, 0.397833, -0.0085437)
mesh = ExtResource("5_x3wgy")
script = ExtResource("3_6t5aa")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, -5.82077e-11, 0, -5.82077e-11, 1, -1.86265e-09, 0, 0, 1, 0.0052205, 0.340762, -0.0278564)
shape = SubResource("CapsuleShape3D_lsmp6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("4_fkybt")

[node name="HealthContainer" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 20.0
offset_top = 18.0
offset_right = 317.0
offset_bottom = 63.0

[node name="Heart" type="TextureRect" parent="CanvasLayer/HealthContainer"]
layout_mode = 2
texture = ExtResource("4_vgqql")

[node name="Heart2" type="TextureRect" parent="CanvasLayer/HealthContainer"]
layout_mode = 2
texture = ExtResource("4_vgqql")

[node name="Heart3" type="TextureRect" parent="CanvasLayer/HealthContainer"]
layout_mode = 2
texture = ExtResource("4_vgqql")

[node name="Heart4" type="TextureRect" parent="CanvasLayer/HealthContainer"]
layout_mode = 2
texture = ExtResource("4_vgqql")

[node name="Heart5" type="TextureRect" parent="CanvasLayer/HealthContainer"]
layout_mode = 2
texture = ExtResource("4_vgqql")

[node name="ScoreText" type="Label" parent="CanvasLayer"]
offset_left = 23.0
offset_top = 79.0
offset_right = 261.0
offset_bottom = 123.0
text = "Score: 500"
label_settings = SubResource("LabelSettings_vgqql")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="GOScn" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("7_3smsa")

[node name="AnimationPlayer" type="AnimationPlayer" parent="GOScn"]
libraries = {
&"": SubResource("AnimationLibrary_6r07y")
}

[node name="FadeRect" type="ColorRect" parent="GOScn"]
offset_left = -3.0
offset_top = -6.0
offset_right = 1138.0
offset_bottom = 635.0
color = Color(0, 0, 0, 1)

[node name="GameOver" type="Label" parent="GOScn"]
anchors_preset = -1
anchor_top = 0.151
anchor_bottom = 0.151
offset_left = 522.0
offset_top = 147.152
offset_right = 668.0
offset_bottom = 216.152
theme_override_fonts/font = SubResource("SystemFont_8erm5")
theme_override_font_sizes/font_size = 1
text = "Game Over"
label_settings = SubResource("LabelSettings_f1ek2")

[node name="HBoxContainer" type="HBoxContainer" parent="GOScn"]
offset_left = 521.0
offset_top = 288.0
offset_right = 717.0
offset_bottom = 442.0

[node name="Retry" type="Button" parent="GOScn/HBoxContainer"]
layout_mode = 2
text = "Retry
"

[node name="MainM" type="Button" parent="GOScn/HBoxContainer"]
layout_mode = 2
text = "Main Menu
"
icon = SubResource("ViewportTexture_tx1dd")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_3smsa")

[node name="third_person_controller" type="Node3D" parent="."]
script = ExtResource("7_8erm5")

[node name="SpringArm3D" type="SpringArm3D" parent="third_person_controller"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.9325174, -0.0812451)
spring_length = 2.0

[node name="Camera3D" type="Camera3D" parent="third_person_controller/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.62268e-07, 0, 3)

[connection signal="pressed" from="GOScn/HBoxContainer/Retry" to="GOScn" method="_on_retry_pressed"]
[connection signal="pressed" from="GOScn/HBoxContainer/MainM" to="GOScn" method="_on_main_m_pressed"]
